fix missing gap in forms, fixes #10266
git-svn-id: svn://develop.studip.de/studip/trunk@55854 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/less/forms.less
+++ b/resources/assets/stylesheets/less/forms.less
@@ -158,7 +158,7 @@ form.default {
 
         // Insert invisible element that corrects double padding/margin at the
         // bottom
-        &:not(.collapsed)::after {
+        &:not(.collapsed) > label:last-child::after {
             content: '';
             display: block;
             margin-top: -@gap;
